css-library/neo/neo-scss/components/_leftnav.scss
/* ... */
@mixin leftnav-title {
  &__title {
    background-color: $leftnav-background-color;
    min-height: $leftnav-title-height;
    padding: $leftnav-title-padding-vertical 0 0
      $leftnav-title-padding-horizontal;
    font-size: $leftnav-title-font-size;
    font-weight: $leftnav-title-font-weight;
    line-height: $leftnav-title-font-line-height;
    letter-spacing: $leftnav-title-font-letter-spacing;
    color: $leftnav-title-font-color;
    @include rtl-selector {
      padding: $leftnav-title-padding-vertical $leftnav-title-padding-horizontal
        0 0;
    }
  }
}

@mixin leftnav-links {
  &__links {
    background-color: $leftnav-background-color;
    & > a {
      color: $leftnav-sub-default-color;
      font-size: $leftnav-link-font-size;
      font-weight: $leftnav-link-font-weight;
      line-height: $leftnav-link-font-line-height;
      letter-spacing: $leftnav-link-font-letter-spacing;
    }
    &:hover {
      cursor: pointer;
      & > a {
        color: $link-hover-color;
        transition: $tab-hover-transition;
      }
    }
    min-height: $leftnav-link-height;
    max-width: $leftnav-main-max-width;
    padding: 0 0 0 $leftnav-link-padding-horizontal;
    @include rtl-selector {
      padding: 0 $leftnav-link-padding-horizontal 0 0;
    }
  }
}

@mixin leftnav-condensed {
  &.neo-leftnav--condensed {
    position: relative;
    & .neo-leftnav {
      //hard-coded space between last list item and toggle
      margin-bottom: 56px;
    }
    & .neo-leftnav__main {
      min-width: 240px;
      &:focus-visible {
        outline: 0;
      }
      & > a {
        padding: 16px !important;
        text-decoration: none;
        & span {
          flex-grow: 1;
          display: flex;
          justify-content: flex-end;
          flex-direction: row;
          font-size: 16px;
          color: var(--leftnav-default-color);
          &:before {
            transition: transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1);
          }
        }
      }
      &--expand {
        & > a > span {
          &:before {
            transition: $accordion-icon-transition;
            transform: rotate(90deg) $accordion-active-icon-animation;
            @include rtl-selector {
              transform: rotate(90deg);
            }
          }
        }
      }
    }
    & .neo-leftnav--condensed__toggle {
      left: 0;
      padding: 16px !important;
      max-width: 55px !important;

      &:hover {
        text-decoration: none;
        color: $leftnav-sub-active-hover-color;
        background-color: $leftnav-hover-background-color;
        transition: $tab-hover-transition;
      }
      .neo-leftnav__main {
        min-width: 55px !important;
        max-width: 55px !important;
      }
      max-width: 55px !important;
      position: absolute;
      bottom: 0;
      & > a {
        padding: 16px !important;
        text-decoration: none;
        &:before {
          margin: 0px !important;
        }
      }
    }

    &.hide-nav {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      max-width: 55px !important;
      & .neo-leftnav__main {
        max-width: 55px !important;
        & > a {
          font-size: 0px;
          padding: 16px !important;
          max-width: 55px !important;
          & span {
            visibility: hidden;
          }
          &:before {
            margin: 0px !important;
          }
        }
      }
      .neo-leftnav--condensed__toggle {
        left: 0;
        padding: 16px !important;
        max-width: 55px !important;

        &:hover {
          text-decoration: none;
          color: $leftnav-sub-active-hover-color;
          background-color: $leftnav-hover-background-color;
          transition: $tab-hover-transition;
        }
        &::before {
          transform: rotate(180deg);
        }
      }
    }
    &--scrollable {
      .neo-leftnav {
        overflow: auto;
      }
      &.neo-leftnav--condensed--scrollable.hide-nav {
        max-width: 70px !important;
      }
      & .neo-leftnav__main {
        min-width: initial;
      }
      & .neo-tooltip {
        width: 52px;
      }
      & .neo-tooltip--right .neo-tooltip__content{
        transform: translate(0, -118%);
      }
    }
  }
}

.neo-leftnav {
  @include NeoLinkStyles;
  &--wrapper {
    height: inherit;
    max-width: 240px;
    overflow: auto;
    transition: max-width 0.2s ease !important;
    @include leftnav-condensed;
    &::-webkit-scrollbar {
      width: 0;
    }
  }
  &--wrapper-tooltip {
    overflow: inherit;
  }
  &__nav {
    margin: 0;
    overflow: hidden;
  }
  &__nav--tooltip {
    overflow: inherit;
  }
  &__category,
  &__disabled {
    height: inherit;
    justify-content: left;
  }

  @include leftnav-main;
  @include leftnav-sub;
  @include leftnav-title;
  @include leftnav-links;
}

.neo-leftnav--collapsible {
  @extend %sheet;

  height: inherit;
  padding: 0 0 17px 0 !important;
}

